# open-auto-battler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BETA_RELEASE_PLAN.md  CARD_SCHEMA.md  CONTEXT.md  Cargo.toml  IDEA.md  NFT_SPEC.md  PALLET_PLAN.md  PLAYTEST_PLAN.md  RULEBOOK.md  UI.md  build-desktop.sh  build-wasm.sh  start-desktop.sh  start.sh  ux-pr6-audit.md  ux-remediation-plan-2026-03-20.md  ux-report-2026-03-20.md
.github/workflows/: ci.yml  core-coverage.yml  deploy-frontend.yml
agents/: AGENTS.md  AGENTS_INDEX.md  ARCHITECTURE.md  BLOCKCHAIN_PALLET.md  CORE_ENGINE.md  FORMATTING.md  POLKADOT_API.md  REACT.md  SERIALIZATION_CONTRACTS.md  SUBSTRATE.md  TESTING_GUIDE.md  WASM_BRIDGE.md  WEB_UI.md
assets/: Cargo.toml  build.rs
battle/: Cargo.toml  build.rs  coverage.sh
battle/src/: battle.rs  bounded.rs  commit.rs  error.rs  lib.rs  limits.rs  log.rs  opponents.rs  state.rs  types.rs  view.rs
battle/src/tests/: battle_helpers.rs  battle_result.rs  commit_paths.rs  incremental.rs  log.rs  math.rs  mod.rs  opponents.rs  priority.rs  state_ops.rs  turns.rs
blockchain/: Cargo.toml  Dockerfile  README.md  chain_spec.json  deploy.sh  docker-compose.yml  start_chain.sh  zombienet.toml
blockchain/.github/workflows/: ci.yml  release.yml  test-zombienet.yml
blockchain/node/: Cargo.toml
blockchain/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
blockchain/pallets/arena/: Cargo.toml
blockchain/pallets/arena/src/: lib.rs  mock.rs  tests.rs
blockchain/pallets/auto-battle/: BENCHMARK_COMPLEXITY.md  Cargo.toml
blockchain/pallets/auto-battle/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/card-registry/: Cargo.toml
blockchain/pallets/card-registry/src/: lib.rs
blockchain/pallets/common/: Cargo.toml
blockchain/pallets/constructed/: Cargo.toml
blockchain/pallets/game-common/: Cargo.toml
blockchain/pallets/game-common/src/: lib.rs
blockchain/pallets/tournament/: Cargo.toml
blockchain/pallets/tournament/src/: lib.rs  mock.rs  tests.rs  weights.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs  nft_genesis.rs
blockchain/runtime/src/configs/: mod.rs
cards/: build.rs  cards.json  sets.json  styles.json
cards/assets/themes/: cyberpunk.json
cards/src/: lib.rs
cards/themes/: cyberpunk.json  pastel.json
client/: Cargo.toml
client/src/: engine.rs  lib.rs  sandbox.rs
contract/: Cargo.toml  Makefile  OabArena.sol  README.md  cdm.json  contract.polkavm  deployment.json
contract/.cargo/: config.toml
contract/scripts/: deploy.sh
contract/src/: main.rs
contract/tests-native/: Cargo.toml
contract/tests-native/src/: lib.rs
core/: Cargo.toml  build.rs  coverage.sh
core/src/: abilities.rs  battle.rs  bounded.rs  cards.rs  commit.rs  engine.rs  error.rs  lib.rs  limits.rs  log.rs  opponents.rs  rng.rs  sandbox.rs  state.rs  tests.rs  types.rs  units.rs  view.rs
core/src/tests/: battle_helpers.rs  battle_result.rs  commit_paths.rs  limits.rs  mana.rs  math.rs  mod.rs  opponents.rs  priority.rs  state.rs  state_ops.rs  status.rs  turns.rs  units.rs  view.rs
core/src/tests/triggers/: abyssal_bomber.rs  combos.rs  conditions.rs  damage.rs  deathtouch.rs  faint.rs  lifecycle.rs  mod.rs  positions.rs  random_ally_other.rs  scopes.rs  snipe.rs  spawn.rs  spines.rs  support.rs  targeting.rs
docs/: ABILITY_TWO_ENUM_SPEC.md  CARD_ART_DESCRIPTIONS.md  CARD_DESIGN.md  CONTAINER_DEV.md  CURRENT_ARCHITECTURE.md  KEYWORD_SYSTEM_SPEC.md  QUICKSTART.md  README.md  STATUS_SYSTEM_SPEC.md  UI_FLOW.md
docs/migrations/specs/: 2026-06-30-migrate-open-auto-battler-to-product-sdk-design.md
game/: Cargo.toml
game/src/: bounded.rs  constructed.rs  lib.rs  opponents.rs  sealed.rs  state.rs  view.rs
game/src/tests/: commit_paths.rs  config.rs  mod.rs  opponents.rs  state.rs  state_ops.rs  turns.rs  view.rs
oab/: Cargo.toml
oab/src/: lib.rs
presentations/: README.md
presentations/game-overview/: slides.md
register-cards/: Cargo.toml
register-cards/src/: main.rs
scripts/: Aggro.results.txt  Economy.results.txt  Greedy.results.txt  Tank.results.txt  generate_card_art.py  run_tournament.sh
scripts/agents/: aggro.py  common.py  economy.py  greedy.py  tank.py
server/: Cargo.toml  PLAYER_AGENT_GUIDE.md  README.md
server/src/: chain.rs  constructed.rs  game.rs  http.rs  local.rs  main.rs  types.rs
sim/: Cargo.toml
sim/src/: analytics.rs  config.rs  main.rs  runner.rs  strategy.rs
sim/src/games/: mod.rs  starter_pack.rs
tools/ghost-backfill/: README.md  ghost-board-backfill.json  package-lock.json  package.json  tsconfig.json
tools/ghost-backfill/src/: backfill-boards.ts  dataset.ts  generate-dataset.ts
web/: .gitignore  .prettierignore  cdm.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: package.json
web/.papi/metadata/: auto_battle.scale
web/patches/: @polkadot-api+sdk-ink+0.6.2.patch
web/public/: manalimit_core_bg.wasm  manifest.json  presentations
web/scripts/: check-next-balance.mjs  e2e-onchain.mjs  optimize-card-art.sh  prepare-card-art.sh  register-cards.ts  test-query.ts
web/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: main.rs
web/src/backends/: types.ts
web/src/components/: AccountPage.tsx  AchievementsPage.tsx  Arena.tsx  ArenaGamePage.tsx  ArenaPage.tsx  AuthGate.tsx  BagOverlay.tsx  BattleArena.tsx  BattleHistoryPage.tsx  BattleOverlay.tsx  BattleView.tsx  Bench.tsx  BlockchainPage.tsx  BlockchainSelectPage.tsx  CardDetailModal.tsx  CardDetailPanel.tsx  CardFan.tsx  CardFilterBar.tsx  CardGallery.tsx  CardInspectOverlay.tsx  CardsPage.tsx  CollectionPage.tsx  ConstructedBattlePage.tsx  ConstructedGamePage.tsx  ConstructedPage.tsx  ContractArenaGamePage.tsx  ContractArenaPage.tsx  ContractGameOverScreen.tsx  (+69 more)
(+101 files in other folders)
