[workspace]
resolver = "2"
members = [
    "battle",
    "assets",
    "game",
    "client",
    "contract/tests-native",
]
exclude = [
    "contract",
    "register-cards",
]

[workspace.package]
license = "MIT-0"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
homepage = "https://github.com/shawntabrizi/auto-battle"
repository = "https://github.com/shawntabrizi/auto-battle.git"
edition = "2021"

[workspace.dependencies]
oab-battle = { version = "0.1.0", path = "./battle", default-features = false }
oab-assets = { version = "0.1.0", path = "./assets", default-features = false }
oab-game = { version = "0.1.0", path = "./game", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
parity-scale-codec = { version = "3.7.4", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
bounded-collections = { version = "0.2.4", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
