[package]
name = "manalimit-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
manalimit-core = { workspace = true, default-features = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
wee_alloc = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"] }
getrandom = { workspace = true, features = ["js"] }

[features]
default = ["wee_alloc"]

[profile.release]
opt-level = "s"
lto = true