[package]
name = "oab-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
oab-core = { workspace = true, features = ["std", "bounded"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
bounded-collections = { workspace = true }
wasm-bindgen = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
getrandom = { workspace = true, features = ["js"] }

[features]
default = []
browser_log = ["oab-core/browser_log"]
