[workspace]

[package]
name = "oab-contract"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
pvm-contract-macros = { path = "../../cargo-pvm-contract/crates/pvm-contract-macros" }
pvm-contract-types = { path = "../../cargo-pvm-contract/crates/pvm-contract-types", features = ["alloc"] }
pvm-bump-allocator = { path = "../../cargo-pvm-contract/crates/pvm-bump-allocator" }
polkavm-derive = "0.31.0"
ruint = { version = "1.17", default-features = false }
pallet-revive-uapi = { version = "0.10", default-features = false }
oab-battle = { path = "../battle", default-features = false }
parity-scale-codec = { version = "3.7", default-features = false }

[features]
abi-gen = []

[build-dependencies]
cargo-pvm-contract-builder = { path = "../../cargo-pvm-contract/crates/cargo-pvm-contract-builder" }
