[package]
name = "manalimit-core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
browser = [
    "std",
    "dep:wasm-bindgen",
    "dep:serde_json",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:getrandom",
]

[dependencies]
# Core (always included, no_std compatible)
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Browser-only (WASM builds for web)
wasm-bindgen = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
