[package]
name = "manalimit-core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "bounded-collections?/std",
]
bounded = ["dep:bounded-collections"]

[dependencies]
# Core (always included, no_std compatible)
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bounded-collections = { version = "0.2.4", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true