[package]
name = "manalimit-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "bounded-collections?/std",
]
bounded = ["dep:bounded-collections"]
browser_log = []

[dependencies]
# Core (always included, no_std compatible)
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "alloc"] }
bounded-collections = { workspace = true, optional = true }
log = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[profile.release]
opt-level = "s"
lto = true