[package]
name = "oab-game"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "oab-battle/std",
    "serde/std",
]

[dependencies]
oab-battle = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
