[package]
name = "oab"
version = "0.1.0"
description = "Open Auto Battler - a deterministic auto-battler game engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["oab-battle/std", "oab-game/std"]
bounded = ["oab-battle/bounded", "oab-game/bounded"]

[dependencies]
oab-battle = { workspace = true }
oab-game = { workspace = true }
