[package]
name = "oab-server"
version = "0.1.0"
description = "HTTP game server for AI agents to play Open Auto Battler"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oab-server"
path = "src/main.rs"

[features]
default = ["chain"]
chain = ["subxt", "subxt-signer", "tokio"]

[dependencies]
oab-battle = { workspace = true, features = ["std", "bounded"] }
oab-assets = { workspace = true, features = ["std", "bounded"] }
oab-game = { workspace = true, features = ["std", "bounded"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
bounded-collections = { workspace = true, features = ["std"] }
tiny_http = "0.12"
subxt = { workspace = true, optional = true }
subxt-signer = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
