[package]
name = "auto-battle-runtime"
description = "A parachain runtime template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
cumulus-pallet-parachain-system.workspace = true
docify = { workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
oab-battle = { workspace = true }
oab-assets = { workspace = true }
oab-game = { workspace = true }
pallet-oab-arena.workspace = true
pallet-oab-tournament.workspace = true
pallet-oab-card-registry.workspace = true
oab-game-common.workspace = true
polkadot-sdk = { workspace = true, features = ["cumulus-pallet-aura-ext", "cumulus-pallet-session-benchmarking", "cumulus-pallet-weight-reclaim", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-utility", "pallet-aura", "pallet-authorship", "pallet-balances", "pallet-collator-selection", "pallet-message-queue", "pallet-nfts", "pallet-session", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "pallet-utility", "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", "runtime", "staging-parachain-info", "staging-xcm", "staging-xcm-builder", "staging-xcm-executor"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"oab-battle/std",
	"oab-assets/std",
	"oab-game/std",
	"pallet-oab-arena/std",
	"pallet-oab-tournament/std",
	"pallet-oab-card-registry/std",
	"oab-game-common/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"hex-literal",
	"pallet-oab-arena/runtime-benchmarks",
	"pallet-oab-tournament/runtime-benchmarks",
	"pallet-oab-card-registry/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-oab-arena/try-runtime",
	"pallet-oab-tournament/try-runtime",
	"pallet-oab-card-registry/try-runtime",
	"polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
