[package]
name = "pallet-auto-battle"
description = "FRAME pallet for the Open Auto Battler on-chain game logic."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
oab-battle = { workspace = true, features = ["bounded"] }
oab-assets = { workspace = true, features = ["bounded"] }
oab-game = { workspace = true, features = ["bounded"] }
pallet-oab-card-registry = { workspace = true }
oab-game-common = { workspace = true }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = ["pallet-balances", "std"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "oab-battle/std", "oab-assets/std", "oab-game/std", "pallet-oab-card-registry/std", "oab-game-common/std"]
try-runtime = ["frame/try-runtime"]
