[package]
name = "pallet-oab-card-registry"
description = "FRAME pallet for Open Auto Battler card and set management."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
oab-battle = { workspace = true, features = ["bounded"] }
oab-assets = { workspace = true, features = ["bounded"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "oab-battle/std", "oab-assets/std"]
try-runtime = ["frame/try-runtime"]
